--- a/src/Finance.Web/Views/Category/Index.cshtml
+++ b/src/Finance.Web/Views/Category/Index.cshtml
@@ -20,6 +20,7 @@
 						<custom-grid
 							:data="gridData"
 							:columns="gridColumns"
+							:display-names="displayNames"
 							:filter-key="searchQuery">
 						</custom-grid>
 	                    
@@ -51,13 +52,13 @@
         <thead>
         <tr>
             <th v-for="key in columns" v-on:click="sortBy(key)" :class="{ active: sortKey == key }">
-            	{{ key | capitalize }} <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'"></span>
+            	{{ key | getDisplayName(displayNames) }} <span class="arrow" :class="sortOrders[key] > 0 ? 'asc' : 'dsc'"></span>
             </th>
 			<th></th>
         </tr>
         </thead>
         <tbody>
-        <tr v-for="entry in filteredData">
+        <tr v-for="(entry, index) in filteredData">
             <td v-for="key in columns">{{entry[key]}}</td>
 			<td>
 				<a :href="'/category/edit/' + entry.id"><span class="fa fa-edit"></span> </a>
