--- a/src/Finance.Web/Views/Category/Create.cshtml
+++ b/src/Finance.Web/Views/Category/Create.cshtml
@@ -7,8 +7,6 @@
     <script type="text/javascript" src="~/Scripts/parsley.js"></script>
 }
 
-<div class="container-fluid">
-    <div class="animated fadeIn">
-        @{ await Html.RenderPartialAsync("_CategoryForm"); }
-	</div>
+<div id="v-category-form" class="columns is-multiline">
+    @{ await Html.RenderPartialAsync("_CategoryForm"); }
 </div>
