--- a/src/Finance.Web/Views/Category/_CategoryForm.cshtml
+++ b/src/Finance.Web/Views/Category/_CategoryForm.cshtml
@@ -1,15 +1,37 @@
 ﻿@model Finance.Common.Entities.Category
 
-<div class="row">
-    <div class="col-md-12">
-        @using (Html.BeginForm(null, null, FormMethod.Post, new { data_parsley_validate = "" }))
-        {
-            @Html.AntiForgeryToken()
-            <div class="form-group">
-                <label>Name</label>
-                <input type="text" id="name" name="Name" class="form-control" value="@Model.Name" placeholder="e.g Shopping" />
+<div  class="column is-12">
+    @using (Html.BeginForm(null, null, FormMethod.Post, new { data_parsley_validate = "" }))
+    {
+        @Html.AntiForgeryToken()
+
+        <div class="field is-horizontal">
+            <div class="field-label is-normal">
+                <label class="label">Name</label>
             </div>
-            <button type="submit" class="btn btn-primary">Save</button>
-        }
-    </div>
+            <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                        <input type="text" id="name" name="Name" class="input" value="@Model.Name" placeholder="e.g Shopping" />
+                    </div>
+                    <p class="help is-danger">
+                        This field is required
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="field is-horizontal">
+            <div class="field-label">
+                <!-- Left empty for spacing -->
+            </div>
+            <div class="field-body">
+                <div class="field">
+                    <div class="control">
+                        <button type="submit" class="button is-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    }
 </div>
